@@ -1,4 +1,5 @@
 0.5.0
+- Fix: Config check warning in mod1 and mod2 in about any folder (#592)
 - Change: Move the "allow multiple registrations" and "needs registration" checkboxes from the date records to the topic records (#651)
 - Change: Change FE display for price = 0 (#390)
 - Change: Remove "times and places" from the list view (#652)
